css/yams.css
body {
    /* font-family: 'Rubik Mono One', sans-serif;*/
    font-family: 'Montserrat', sans-serif;
    margin: 0 0 0 0;
    height: 100%;
}

#mainYam {
    width: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
    image-rendering: pixelated;
    image-rendering: -moz-crisp-edges;
    image-rendering: crisp-edges;
    opacity: .9;
    transition: 0.1s;
}

#mainYam:active {
    transform: translateY(3px);
}

#mainYam:hover {
    opacity: 1;
    transition: 0.1s;
}

#counter {
    -webkit-appearance: @value;
    -moz-appearance: @value;
    -ms-appearance: @value;
    -o-appearance: @value;
    appearance: @value;
    box-shadow: none !important;
    outline: none;
    border: 0;
    text-align: center;
    background-color: transparent;
    color: black;


    font-family: 'Montserrat', sans-serif;

}

* {
    box-sizing: border-box;
}

/* Create three equal columns that floats next to each other */
.column {
    float: left;
    width: 33.33%;
    height: 100%;
}

/* Clear floats after the columns */
.row:after {
    content: "";
    display: table;
    clear: both;
}

/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
    .column {
        width: 100%;
    }
}

